--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
-    "zustand": "^4.5.4"
+    "zustand": "^4.5.4",
+    "cross-env": "^7.0.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
@@ -66,7 +67,6 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "cross-env": "^7.0.3",
     "genkit-cli": "^1.20.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
