feat: implement WhatsApp URL integration for quote requests
- Add send-whatsapp.ts with WhatsApp URL scheme functions
- Generate WhatsApp links with pre-filled quote request messages
- Update quote request API to return whatsappUrl in response
- Automatically open WhatsApp chat on successful submission
- Use NEXT_PUBLIC_WHATSAPP_BUSINESS_PHONE for configuration
- No API key required - uses standard WhatsApp web links
- Update .env.example with WhatsApp configuration details
- Integrate with checkout page to open WhatsApp after submission

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,14 @@ NEXT_PUBLIC_FIREBASE_APP_ID=your_firebase_app_id
 # Application Configuration
 NEXT_PUBLIC_API_URL=https://api.your-domain.com
 NODE_ENV=production
+
+# WhatsApp Integration Configuration
+# No API key required - uses WhatsApp URL scheme (https://wa.me/)
+# Simply provide your WhatsApp business phone number in international format
+# Format: country code + phone number without + or spaces (e.g., 234XXXXXXXXXX for Nigeria)
+NEXT_PUBLIC_WHATSAPP_BUSINESS_PHONE=234XXXXXXXXXX
+
+# Email Service Configuration (Resend)
+# Get API key from https://resend.com
+RESEND_API_KEY=your_resend_api_key
+
