--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,7 @@
 [build.environment]
   NODE_VERSION = "20"
   NODE_ENV = "production"
+  NPM_FLAGS = "--include=dev"
 
 # Redirect to custom domain if needed
 [[redirects]]
