--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cross-env": "^7.0.3",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-autoplay": "^8.1.7",
@@ -48,7 +49,7 @@
     "framer-motion": "^11.5.7",
     "genkit": "^1.20.0",
     "lucide-react": "^0.475.0",
-    "next": "^15.5.6",
+    "next": "^15.5.7",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -58,8 +59,7 @@
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
-    "zustand": "^4.5.4",
-    "cross-env": "^7.0.3"
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
@@ -67,6 +67,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.7",
     "genkit-cli": "^1.20.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
