fix: update gitignore, fix workflow command, remove unused param, add memory bank docs

--- a/.github/workflows/lint-and-type-check.yml
+++ b/.github/workflows/lint-and-type-check.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Run TypeScript compiler
         run: |
           echo "📦 Running TypeScript compiler..."
-          npm run type-check
+          npm run typecheck
         continue-on-error: false
       
       - name: Build project
