--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev --turbopack -p 9003",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "prisma generate && cross-env NODE_ENV=production NEXT_SKIP_ESLINT=1 next build",
+    "build": "prisma generate && cross-env NODE_ENV=production next build",
     "start": "next start",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit",
@@ -46,6 +46,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-table": "^8.21.3",
+    "@types/react-day-picker": "^5.2.1",
     "@upstash/ratelimit": "^2.0.7",
     "@upstash/redis": "^1.35.7",
     "axios": "^1.13.2",
@@ -60,13 +61,15 @@
     "framer-motion": "^11.5.7",
     "genkit": "^1.20.0",
     "lucide-react": "^0.475.0",
-    "next": "16.0.7",
+    "next": "^16.0.8",
     "next-auth": "^4.24.13",
     "pg": "^8.16.3",
     "react": "19.2.1",
+    "react-day-picker": "^9.12.0",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
+    "redis": "^5.10.0",
     "resend": "^6.5.2",
     "schema-dts": "^1.1.5",
     "tailwind-merge": "^3.0.1",
@@ -89,8 +92,10 @@
     "jest-environment-jsdom": "^30.2.0",
     "prisma": "^7.1.0",
     "tailwindcss": "^3.4.1",
+    "ts-morph": "^27.0.2",
+    "ts-node": "^10.9.2",
     "tsx": "^4.7.1",
-    "typescript": "^5",
+    "typescript": "^5.9.3",
     "typescript-eslint": "^8.49.0"
   }
 }
